@@ -4,9 +4,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.7'
 }
 
-group = 'com.trustamarket.paymentservice'
+group = 'com.trusta-market'
 version = '0.0.1-SNAPSHOT'
-description = 'payment-service'
 
 java {
     toolchain {
@@ -16,6 +15,13 @@ java {
 
 repositories {
     mavenCentral()
+    maven {
+        url = uri("https://maven.pkg.github.com/trusta-market/common")
+        credentials {
+            username = project.findProperty("gpr.user")?.toString() ?: System.getenv("GPR_USER")
+            password = project.findProperty("gpr.token")?.toString() ?: System.getenv("GPR_TOKEN")
+        }
+    }
 }
 
 ext {
@@ -23,10 +29,15 @@ ext {
 }
 
 dependencies {
+    implementation 'com.trustamarket:common:0.0.1-SNAPSHOT'
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
@@ -44,4 +55,8 @@ dependencyManagement {
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+tasks.withType(Test).configureEach {
+    jvmArgs '-XX:+EnableDynamicAgentLoading'
 }
